# swagger.yml
@@ -103,6 +103,8 @@ paths:
       responses:
         '400':
           description: Error on body request
+        '404':
+          description: Store not found
         '500':
           description: Internal error on update database
     delete:
@@ -149,7 +151,33 @@ paths:
                       $ref: '#/components/schemas/Case'
         '500':
           description: Bad request, internal error.
-  
+  /stores/{storeID}/customers:
+    get:
+      tags:
+      - "customer"
+      - "store"
+      summary: Returns the customers of the store.
+      parameters:
+        - in: path
+          name: storeID
+          schema:
+            type: integer
+          required: true
+          description: Numeric ID of the store
+      responses:
+        '200':
+          description: Return the customers of the store ID
+          content:
+            application/json:
+              schema: 
+                type: object
+                properties:
+                  cases:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Customer'
+        '500':
+          description: Bad request, internal error.
   
   
   /customers:
@@ -189,6 +217,8 @@ paths:
                 age:
                   type: string
                 email:
+                  type: string
+                store_id:
                   type: string
       responses: 
         '200':
@@ -246,6 +276,8 @@ paths:
       responses:
         '400':
           description: Error on body request
+        '404':
+          description: Customer not found
         '500':
           description: Internal error on update database
     delete:
@@ -291,7 +323,34 @@ paths:
                     items:
                       $ref: '#/components/schemas/Case'
         '500':
-          description: Bad request, internal error.        
+          description: Bad request, internal error.
+  /customers/{customerID}/stores:
+    get:
+      tags:
+      - "customers"
+      - "store"
+      summary: Returns the store of the customer.
+      parameters:
+        - in: path
+          name: customerID
+          schema:
+            type: integer
+          required: true
+          description: Numeric ID of the customer
+      responses:
+        '200':
+          description: Return the store of the customer ID
+          content:
+             application/json:
+              schema: 
+                $ref: '#/components/schemas/Store'
+        '404':
+          description: case not found. 
+        '500':
+          description: Bad request, internal error.
+          
+          
+          
           
   /cases:
     get:
@@ -392,6 +451,8 @@ paths:
       responses:
         '400':
           description: Error on body request
+        '404':
+          description: Case not found
         '500':
           description: Internal error on update database
     delete:
@@ -482,6 +543,11 @@ components:
           type: string
         email:
           type: string
+        store_id:
+          type: string
+      required:
+        - store_id
+
     Case:
       properties:
         id:
